# wheelchair-automation

./: .gitignore  .gitmodules  .rosinstall  LICENSE  NEW_README.md  README.md  install  install_script.sh  top_level_install_script.sh  uninstall_script.sh
ira_laser_tools/: laserscan_filter.yaml
test_simulation/: CMakeLists.txt  costmap_common_params.yaml  local_costmap_params.yaml  package.xml
wheelchair_automation/: CMakeLists.txt  mainpage.dox  manifest.xml
wheelchair_bringup/: CMakeLists.txt  README.md  package.xml
wheelchair_description/: CMakeLists.txt  HOW_TO_DISPLAY_R2D2  README.md  WheelchairSetup.rviz  front-point.rviz  gazebo_full_launch.bash  gazebo_full_launch.bash~  gazebo_full_launch_willow.bash  gazebo_full_launch_willow.bash~  gazebo_simple_launch.bash  gazebo_spawn.bash  gazebo_spawn_hall.bash  gazebo_spawn_swivel.bash  gazebo_spawn_swivel_willow.bash  laserscan_filter.yaml  package.xml  rviz_config.rviz  rviz_viz.bash  rviz_viz.bash~  rviz_viz_swivel.bash
wheelchair_diagnostics/: CMakeLists.txt  package.xml
wheelchair_follower/: CMakeLists.txt  follower_filter_ang.yaml  follower_filter_dist.yaml  package.xml
wheelchair_gui/rqt_runstop/: CMakeLists.txt  README  package.xml  plugin.xml  setup.py
wheelchair_gui/rqt_runstop/scripts/: rqt_runstop
wheelchair_gui/rqt_runstop/src/rqt_runstop/: rqt_runstop_module.py  runstop.ui
wheelchair_mapping/: CMakeLists.txt  README.md  map.yaml  package.xml
wheelchair_navigation/: CMakeLists.txt  NEW_README.md  README.md  base_local_planner_params.yaml  base_local_planner_params_follower.yaml  map.mat  (+13 more)
(+147 files in other folders)
