<?xml version="1.0"?>
<package>
  <name>rqt_runstop</name>
  <version>0.0.0</version>
  <description>The rqt_runstop package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>

  </export>
</package>